# ssm-client-python

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.ci/: Dockerfile  publish-package.sh
.github/workflows/: code_checks.yaml  publish.yaml
docs/: conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst  ssm_client.io.rst  ssm_client.rst  ssm_client.services.rst  ssm_rest_python_client.containers.rst  ssm_rest_python_client.io.rst  ssm_rest_python_client.models.rst  ssm_rest_python_client.rst  ssm_rest_python_client.services.rst  usage.rst
src/ssm_client/: __init__.py  ssm_rester.py  version.py
ssm_rest_python_client/: __init__.py  client.py  exceptions.py  ssm_rester.py
ssm_rest_python_client/containers/: __init__.py  dataset_container.py  model_container.py
ssm_rest_python_client/io/: formats.py  jcamp.py  rruff.py  scidata.py  scidata_jsonld.py
ssm_rest_python_client/models/: __init__.py  dataset_model.py
ssm_rest_python_client/services/: __init__.py  dataset_service.py  model_service.py
tests/: __init__.py  conftest.py  test_dataset.py  test_ssm_rest_python_client.py  test_ssm_rester.py
tests/containers/: __init__.py  test_dataset_container.py  test_model_container.py
tests/e2e/: conftest.py  test_ssm_rester.py
tests/io/: test_formats.py  test_jcamp.py  test_rruff.py  test_scidata.py  test_scidata_jsonld.py
tests/models/: __init__.py  test_dataset_model.py
tests/unit/: __init__.py  (+1 more)
tutorials/: ssm_rester.ipynb
(+33 files in other folders)
