[tool.poetry]
name = "ssm-client-python"
version = "0.5.0"
description = "SSM Python Client"
authors = ["Marshall McDonnell <mcdonnellmt@ornl.gov>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "ssm_rest_python_client"}]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.2"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
tox = "^4.4.5"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
