[project]
name = "ssm-client"
description = "SSM Python Client"
authors = [
    {name = "Marshall McDonnell", email = "mcdonnellmt@ornl.gov"},
]
dependencies = [
    "numpy<2.0.0,>=1.24.2",
    "requests<3.0.0,>=2.28.2",
    "toml<1.0.0,>=0.10.2",
    "scidatalib==0.2.6a6",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
dynamic = ["version"]
license = {text = "BSD 3-Clause License"}

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
]
":lint" = [
    "ruff>=0.6.1",
]

[tool.pdm.dev-dependencies]
test = [
    "tox>=4.6.4",
    "pytest>=7.4.0",
    "pytest-cov>=2.11.1",
    "requests-mock>=1.11.0",
]
docs = [
    "Sphinx>=7.0.1",
    "sphinx-rtd-theme>=0.5.1",
]

lint = [
    "flake8>=6.0.0",
]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "file"
path = "src/ssm_client/version.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
